Bug 5382 - nscd: stack overflow in gc() in cache number of entries in the cache is too large
Summary: nscd: stack overflow in gc() in cache number of entries in the cache is too l...
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: nscd (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Ulrich Drepper
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-11-21 05:01 UTC by Petr Baudis
Modified: 2007-11-23 06:39 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments
Proposed patch (1.17 KB, patch)
2007-11-21 05:01 UTC, Petr Baudis
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Petr Baudis 2007-11-21 05:01:28 UTC
gc() can overflow stack in case the cache has too many entries in it; since
stack size is only 1M per thread, this happenned for our customer at 124530
entries in cache on a heavily loaded nscd with many users and groups.
Comment 1 Petr Baudis 2007-11-21 05:01:47 UTC
Created attachment 2104 [details]
Proposed patch
Comment 2 Ulrich Drepper 2007-11-23 06:39:23 UTC
The change is too pessimistic when it comes to using the stack.  I've checked in
a modified patch.